[package]
name = "tree_cache"
version = "0.1.0"
authors = ["jkuczm <Jakub.Kuczmarski@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2"
uint = "0.6"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
log = "0.4"
array-macro = "1.0"
exitfailure = "0.5"
structopt = "0.2"
clap-verbosity-flag = "0.2"

[dev-dependencies]
failure = "0.1"

[profile.bench]
## Add degug info for `opannotate`
debug = true
